# markdown2docx

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt  run_markdown2docx.py
.claude/skills/bishe-guider/: SKILL.md
.claude/skills/figure-builder/: SKILL.md
.claude/skills/markdown2docx/: SKILL.md
.claude/skills/ppt-builder/: SKILL.md
.claude/skills/thesis-workflow/: SKILL.md
.trellis/spec/backend/: quality-guidelines.md
docs/superpowers/plans/: 2026-04-29-docx-formatter-skill.md  (+2 more)
docx_formatter/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  figures.py  format_extractor.py  formulas.py  headings.py  md_parser.py  numbering.py  pages.py  paragraphs.py  pipeline.py  references.py  styles.py  template_paths.py  utils.py
docx_formatter/templates/: thesis.yaml
examples/: formula_test.docx  full_format_test.docx  full_format_test.md  full_format_test_cli.docx  full_format_test_formatted.docx  full_test.docx  generate_formula_test.py  generate_xref_test.py  test_make_figure.md  thesis.config.yaml  xref_test.docx
paper_workflow/: __init__.py  __main__.py  build.py  cli.py  config.py  figures.py
templates/: academic_paper.yaml  report.yaml
tests/: test_analyzer.py  test_cli.py  test_config.py  test_figures.py  test_format_extractor.py  test_formulas.py  test_headings.py  test_html_comments.py  test_make_figure.py  test_md_parser.py  test_numbering.py  test_pages.py  test_paper_workflow.py  test_paragraphs.py  test_pipeline.py  test_pipeline_markdown.py  test_references.py  test_styles.py  test_utils.py
(+8 files in other folders)
